fixed footer position on mobile and desktop

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,6 +2,7 @@
 footer {
     background-color: #333333;
     padding-top: 2vh;
+    height: 2rem;
     padding-bottom: 2vh;
 }
   
@@ -19,8 +20,23 @@ footer {
     font-size: 1.25rem;
     margin-left: 10%;
     margin-right: 10%;
+    margin-bottom: 2%;
 }
   
 .not_footer {
     min-height: calc(96vh - 2rem);
+}
+
+@media (max-width: 650px) {
+    footer {
+        height: 5rem;
+    }
+
+    .not_footer {
+        min-height: calc(96vh - 5rem);
+    }
+
+    .social_media {
+        grid-template-columns: auto;
+    }
 }
